--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-core": "^6.1.19",
     "babel-loader": "^6.1.0",
     "babel-plugin-react-transform": "^1.1.1",
+    "babel-preset-es2015": "^6.1.18",
     "css-loader": "^0.22.0",
     "html-webpack-plugin": "^1.6.2",
     "react-hot-loader": "^1.3.0",
