--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-preset-es2015": "^6.1.18",
     "css-loader": "^0.22.0",
     "html-webpack-plugin": "^1.6.2",
+    "open-browser-webpack-plugin": "0.0.1",
     "react-hot-loader": "^1.3.0",
     "react-transform-hmr": "^1.0.1",
     "style-loader": "^0.13.0",
