--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "webpack-dev-server --hot --historyApiFallback --inline --progress"
+
   },
   "repository": {
     "type": "git",
@@ -20,11 +22,11 @@
     "react": "^0.14.2"
   },
   "devDependencies": {
-    "babel": "^6.1.18",
     "babel-core": "^6.1.19",
     "babel-loader": "^6.1.0",
     "babel-plugin-react-transform": "^1.1.1",
     "babel-preset-es2015": "^6.1.18",
+    "babel-preset-react": "^6.1.18",
     "css-loader": "^0.22.0",
     "html-webpack-plugin": "^1.6.2",
     "open-browser-webpack-plugin": "0.0.1",
