--- a/package.json
+++ b/package.json
@@ -4,9 +4,17 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack-dev-server --hot --historyApiFallback --inline --progress"
-
+  },
+  "jest": {
+    "scriptPreprocessor": "<rootDir>/node_modules/babel-jest",
+    "unmockedModulePathPatterns": [
+      "<rootDir>/node_modules/react",
+      "<rootDir>/node_modules/react-dom",
+      "<rootDir>/node_modules/react-addons-test-utils",
+      "<rootDir>/node_modules"
+    ]
   },
   "repository": {
     "type": "git",
@@ -19,17 +27,22 @@
   },
   "homepage": "https://github.com/danawhite/react-webpack-video-player#readme",
   "dependencies": {
-    "react": "^0.14.2"
+    "react": "^0.14.3"
   },
   "devDependencies": {
     "babel-core": "^6.1.19",
+    "babel-jest": "*",
     "babel-loader": "^6.1.0",
+    "babel-plugin-react-hot": "^1.0.4",
     "babel-plugin-react-transform": "^1.1.1",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
     "css-loader": "^0.22.0",
     "html-webpack-plugin": "^1.6.2",
+    "jest": "^0.1.40",
+    "jest-cli": "*",
     "open-browser-webpack-plugin": "0.0.1",
+    "react-addons-test-utils": "^0.14.3",
     "react-hot-loader": "^1.3.0",
     "react-transform-hmr": "^1.0.1",
     "style-loader": "^0.13.0",
