--- a/package.json
+++ b/package.json
@@ -40,8 +40,14 @@
   },
   "homepage": "https://github.com/danawhite/react-webpack-video-player#readme",
   "dependencies": {
+    "@grove/react-font-awesome": "^1.1.4",
+    "babel-runtime": "^5.8.34",
+    "font-awesome": "^4.5.0",
+    "fs": "0.0.2",
+    "radium": "^0.14.3",
     "react": "^0.14.3",
-    "react-dom": "^0.14.3"
+    "react-dom": "^0.14.3",
+    "react-icons": "^1.0.3"
   },
   "devDependencies": {
     "babel-core": "^6.1.19",
@@ -51,6 +57,7 @@
     "babel-plugin-react-transform": "^1.1.1",
     "babel-preset-es2015": "^6.1.18",
     "babel-preset-react": "^6.1.18",
+    "babel-preset-stage-0": "^6.3.13",
     "css-loader": "^0.22.0",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.5",
